chamber/styles/base.css
:root {
    --dark: #000;
    --light: #F5F2EA;
    --accent: #00DE00;

    --font-heading: 'Anton', Arial, sans-serif;
    --font-body: 'Arimo', Arial, sans-serif;

    --transition-bezier: transform 0.6s cubic-bezier(0.85, 0, 0.15, 1);
}

/*******************************************
***************** GLOBALS ******************
*******************************************/

*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--font-body);
    font-weight: 400;
    background-color: var(--light);
}

ul {
    list-style-type: none;
}

main h1 {
    text-align: center;
}

/*******************************************
**************** UTILITIES *****************
*******************************************/

.logo-light { display: none; }

body.nav-open .logo-dark { display: none; transition-delay: 0.5s;}
body.nav-open .logo-light { display: block; transition-delay: 0.5s;}

.nav-link {
    text-transform: uppercase;
    text-decoration: none;
    color: var(--accent);
    font-size: 4rem;
    font-family: var(--font-heading);
    transition: 0.1s ease-in-out;
}

.active {
    color: var(--light);
}

.heading-sm {
    font-size: 1.2rem;
    font-family: var(--font-heading);
    text-transform: uppercase;
}

.heading-md {
    font-size: 2rem;
    font-family: var(--font-heading);
    text-transform: uppercase;
}

.heading-lg {
    font-size: 4rem;
    font-family: var(--font-heading);
    text-transform: uppercase;
}

.button { 
    padding: 1rem 2rem;
    text-decoration: none;
    transition: var(--transition-bezier);
}

/*******************************************
***************** HEADER *******************
*******************************************/

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2rem 3rem;
    position: relative;
    z-index: 1001;
}

header .logo-wrapper {
    position: relative;
    height: 70px;
    width: 150px; 
}

header img {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: auto;
    transition: opacity 0.4s ease, transform 0.4s ease;
}

header .logo-wrapper .logo-dark {
    display: block;
}

body.nav-open header .logo-wrapper .logo-dark {
    display: none;
}

body.nav-open header .logo-wrapper .logo-light {
    display: block;
}

header .menu-button {
    cursor: pointer;
    display: grid;
    align-items: center;
    width: 50px;
    height: 50px;
    padding: 0.8rem 0.7rem;
    background: none;
    border: none;
    position: relative;
}

header .menu-button .menu-bar {
    display: block;
    background-color: var(--dark);
    width: 100%;
    height: 4px;
    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), 
                width 0.4s cubic-bezier(0.4, 0, 0.2, 1),
                background-color 0.4s ease;
}

header .menu-button .menu-bar:last-of-type {
    width: 75%;
    margin-left: auto;
}

body.nav-open header .menu-button .menu-bar {
    background-color: var(--light);
    width: 100%;
}

body.nav-open header .menu-button .menu-bar:first-of-type {
    transform: translateY(6px) rotate(45deg);
}

body.nav-open header .menu-button .menu-bar:last-of-type {
    transform: translateY(-6px) rotate(-45deg);
}

/*******************************************
***************** NAVBAR *******************
*******************************************/

.primary-nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: var(--dark);
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    transform: translateY(-100%);
    z-index: 1000;
    transition: var(--transition-bezier);
}

body.nav-open #primary-nav {
    transform: translateY(0);
}

.primary-nav ul li {
    list-style: none;
    text-align: center;
    margin: 1rem 0;
    opacity: 0;
    transform: translateY(30px);
    transition: opacity 0.4s ease, transform 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}

body.nav-open #primary-nav ul li {
    opacity: 1;
    transform: translateY(0);
}

.primary-nav ul li a:hover {
    color: var(--light);
}

body.nav-open #primary-nav ul li:nth-child(1) { transition-delay: 0.5s; }
body.nav-open #primary-nav ul li:nth-child(2) { transition-delay: 0.6s; }
body.nav-open #primary-nav ul li:nth-child(3) { transition-delay: 0.7s; }
body.nav-open #primary-nav ul li:nth-child(4) { transition-delay: 0.8s; }


/*******************************************
***************** BUSINESS *****************
*******************************************/

#businesses {
    display: grid;
    place-items: center;
}

#business-container {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1.5rem;
    padding: 1rem;
    margin: 0 auto;
    width: 95%;
}

#business-container article {
    background-color: var(--light);
    transition: transform 0.3s ease;
    gap: 1rem;
    padding: 2rem;
    text-align: center;
}

#business-container article .visit {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column-reverse;
    gap: 1rem;
    width: 100%;
}

#business-container article .visit h3 {
    text-align: center;
}

#businesses article, #businesses article address {
    display: flex;
    align-items: center;
    flex-direction: column;
}

#businesses article img {
    display: block;
    height: 100px;
    width: auto;
    object-fit: cover;
    padding: 1rem;
}

#business-container.list .company-logo {
  display: none;
}

#businesses article:first-of-type img, #businesses article:last-of-type img {
    background-color: var(--dark);
}

#businesses article address {
    font-style: normal;
    font-size: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

#business-container article .visit a {
    white-space: nowrap;
    flex-shrink: 0;
    color: var(--dark);
    background-color: var(--accent);
}

#business-container.list {
    grid-template-columns: 1fr;
}


/* BUTTON */

.toggle-btn {
    display: flex;
    flex-direction: column;
    gap: 8px;
    background: none;
    border: none;
    cursor: pointer;
    padding: 10px;
}

.toggle-btn span {
    display: block;
    position: relative;
    width: 8px;
    height: 8px;
    background-color: var(--dark);
}

.toggle-btn span::before,
.toggle-btn span::after {
    content: "";
    position: absolute;
    width: 8px;
    height: 8px;
    background-color: var(--dark);
}

.toggle-btn span::before { left: -16px; }
.toggle-btn span::after { left: 16px; }

.toggle-btn.list-active span {
    width: 28px;
}

.toggle-btn.list-active span::after {
    display: none;
}


/*******************************************
***************** FOOTER *******************
*******************************************/

footer {
    padding-block: 2rem;
    background-color: var(--accent);
    color: var(--dark);
    text-align: center;
}

/*******************************************
**************** HOMEPAGE ******************
*******************************************/
/*******************************************
****************** HERO ********************
*******************************************/

.hero {
    color: var(--light);
    background-image: url("../images/hero.avif");
    background-size: cover;
    background-position: 85% center;

    height: 750px;
    padding: 2rem;
    text-align: center;

    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
}

.hero .heading-lg {
    mix-blend-mode: difference;
}

.hero .button {
    background-color: var(--accent);
    color: var(--dark);
}

.hero .button:hover {
    background-color: var(--light);
}

/*******************************************
****************** EVENTS ******************
*******************************************/

.events, .weather {
    padding-top: 3rem;
    text-align: center;
}

.events .heading-lg {
    color: var(--dark);
}

.events .event-card-wrapper {
    list-style: none;
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 3rem;
     padding-block: 2rem;
}

.events .event-card-wrapper li {
    position: relative;
}

.events .event-card-wrapper li::before {
    content: "";
    position: absolute;
    top: -20px;
    left: 0;
    width: 100%;
    height: 1px;
    background: hsl(44, 35%, 84%)
}

.events .event-card .event-date {
    text-transform: uppercase;
    font-size: 0.875rem;
    letter-spacing: 2px;
}

.events .event-card h3 {
    padding-block: 1.5rem 0.5rem;
}

.events .event-card .event-location {
    font-weight: 800;
}

/*******************************************
****************** WEATHER *****************
*******************************************/

.weather .heading-lg {
    padding-bottom: 2rem;
}

.weather .weather-display {
    background-color: var(--dark);
    color: var(--light);
    padding: 2rem 4rem;
}

.weather .today {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: stretch;
}

.weather-display #temperature {
    font-size: 4rem;
    font-weight: 800;
}

.weather-display .weather-display-left {
    text-align: left;
}

.weather-display .weather-display-left .temp-wrapper {
    padding-bottom: 1.5rem;
}

.weather-display .weather-display-left #temp-details {
    color: #7e7e7e;
}

.weather-display .weather-display-left h3 {
    font-size: 0.875rem;
    letter-spacing: 2px;
    text-transform: uppercase;
    font-weight: 400;
    padding-top: 0.3rem;
}

.weather-display .weather-display-right {
    display: flex;
    align-items: end;
    flex-direction: column;
    justify-content: space-between;
    text-align: right;
}

.weather-display .forecast {
    padding-top: 2rem;
}

.weather-display .forecast li:not(:last-child)::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    height: 1px;
    background-color: #2e2e2e;
    width: 100%;
}

.weather-display .forecast li {
    display: flex;
    align-items: center;
    position: relative;
}

.weather-display .forecast li h4 {
    text-transform: uppercase;
    font-size: 0.875rem;
    font-weight: 300;
    letter-spacing: 2px;
    color: #7e7e7e;
}

.weather-display .forecast li span {
    padding-inline: 1rem;
    font-size: 2.5rem;
    font-weight: 600;
}

.weather-display .forecast li img {
    margin-left: auto;
}

